--- a/dcs5/src_files/default_settings.json
+++ b/dcs5/src_files/default_settings.json
@@ -1,10 +1,10 @@
 {
-  "client_settings": {
+  "bluetooth": {
     "DEVICE_NAME": "BigFinDCS5-E5FE",
     "PORT": 1,
-    "DCS5_ADDRESS": "00:06:66:89:E5:FE"
+    "MAC_ADDRESS": "00:06:66:89:E5:FE"
   },
-  "board_settings"  :{
+  "board"  :{
     "DEFAULT_SETTLING_DELAY": 1,
     "DEFAULT_MAX_DEVIATION": 6,
     "DEFAULT_NUMBER_OF_READING": 5,
