Everything seems to be working.

--- a/dcs5/configs/default_configuration.json
+++ b/dcs5/configs/default_configuration.json
@@ -40,7 +40,7 @@
             "a1": "escape",
             "a2": "f1",
             "a3": "f2",
-            "a4": "3",
+            "a4": "f3",
             "a5": "f4",
             "a6": "f5",
             "b1": "f8",
@@ -108,6 +108,13 @@
             "7": "7",
             "8": "8",
             "9": "9",
+            "left_space_1": "space",
+            "left_space_2": "space",
+            "left_space_3": "space",
+            "left_space_4": "space",
+            "left_space_5": "space",
+            "left_space_6": "space",
+            "left_space_7": "space",
             "view": null,
             "batch": null,
             "tab": null,
