--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-bluetooth
+click_shell
+pybluez2
 PySimpleGUI~=4.59.0
 pynput~=1.7.6
 pyserial~=3.5
 PyAutoGUI~=0.9.53
 click~=8.1.3
+setuptools~=59.7.0
