--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+flask
 click_shell
 pybluez2
 PySimpleGUI~=4.59.0
@@ -6,3 +7,5 @@ pyserial~=3.5
 PyAutoGUI~=0.9.53
 click~=8.1.3
 setuptools~=59.7.0
+dcs5~=0.1.0
+celery~=5.2.7
