--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-flask
 click_shell
-pybluez2
+pybluez
 pynput~=1.7.6
 pyserial~=3.5
 pyautogui~=0.9.53
 click~=8.1.3
 setuptools~=59.7.0
-dcs5~=0.1.0
 celery~=5.2.7
