--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 click_shell
-pybluez
-pynput~=1.7.6
-pyserial~=3.5
-pyautogui~=0.9.53
+pyautogui
 click~=8.1.3
-setuptools~=59.7.0
+setuptools
 celery~=5.2.7
