--- a/dcs5/default_configs/controller_configuration.json
+++ b/dcs5/default_configs/controller_configuration.json
@@ -70,7 +70,40 @@
             "right": "right",
             "mode": "MODE"
         },
-        "control_box_mode": {},
+        "control_box_mode": {
+            "a1": "escape",
+            "a2": "BACKLIGHT_DOWN",
+            "a3": "BACKLIGHT_UP",
+            "a4": "UNITS_mm",
+            "a5": "UNITS_cm",
+            "a6": "CHANGE_STYLUS",
+            "b1": "MODE_TOP",
+            "b2": "MODE_LENGTH",
+            "b3": "MODE_BOTTOM",
+            "b4": "f11",
+            "b5": ["Y", "enter"],
+            "b6": "backspace",
+            "c1": "ctrl",
+            "0": "0",
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "4",
+            "5": "5",
+            "6": "6",
+            "7": "7",
+            "8": "8",
+            "9": "9",
+            ".": ".",
+            "skip": "pagedown",
+            "enter": "enter",
+            "del": "delete",
+            "up": "up",
+            "down": "down",
+            "left": "left",
+            "right": "right",
+            "mode": "MODE"
+        },
         "board": {
             "a": "a",
             "b": "b",
@@ -156,6 +189,90 @@
             "del_last_1": "backspace",
             "del_last_2": "backspace"
         },
-        "board_mode": {}
+        "board_mode": {
+            "a": "a",
+            "b": "b",
+            "c": "c",
+            "d": "d",
+            "e": "e",
+            "f": "f",
+            "g": "g",
+            "h": "h",
+            "i": "i",
+            "j": "j",
+            "k": "k",
+            "l": "l",
+            "m": "m",
+            "n": "n",
+            "o": "o",
+            "p": "p",
+            "q": "q",
+            "r": "r",
+            "s": "s",
+            "t": "t",
+            "u": "u",
+            "v": "v",
+            "w": "w",
+            "x": "x",
+            "y": "y",
+            "z": "z",
+            "0": "0",
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "4",
+            ".": ".",
+            "5": "5",
+            "6": "6",
+            "7": "7",
+            "8": "8",
+            "9": "9",
+            "left_space_1": "space",
+            "left_space_2": "space",
+            "left_space_3": "space",
+            "left_space_4": "space",
+            "left_space_5": "space",
+            "left_space_6": "space",
+            "left_space_7": "space",
+            "view": null,
+            "batch": null,
+            "tab": null,
+            "histo": null,
+            "summary": null,
+            "dismiss": null,
+            "fish": null,
+            "sample": null,
+            "sex": null,
+            "size": null,
+            "light_bulb": null,
+            "scale": null,
+            "location": null,
+            "pit_pwr": null,
+            "settings": null,
+            "1B": "-",
+            "2B": "(",
+            "3B": ")",
+            "4B": null,
+            "5B": null,
+            "6B": null,
+            "7B": "alt",
+            "8B": "shift",
+            "1G": "BACKLIGHT_DOWN",
+            "2G": "BACKLIGHT_UP",
+            "3G": null,
+            "4G": null,
+            "5G": null,
+            "6G": null,
+            "7G": "UNITS_mm",
+            "8G": "UNITS_cm",
+            "right_space_1": "space",
+            "right_space_2": "space",
+            "right_space_3": "space",
+            "right_space_4": "space",
+            "right_space_5": "space",
+            "right_space_6": "space",
+            "del_last_1": "backspace",
+            "del_last_2": "backspace"
+        }
     }
 }
