--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-pyautogui~=0.9.53
-click~=8.1.3
-PySimpleGUI~=4.60.3
+click==8.1.3
+MouseInfo==0.1.3
+PyAutoGUI==0.9.53
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.28
+PySimpleGUI==4.60.4
+python3-xlib==0.15
+pytweening==1.0.4
