--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,8 +43,6 @@
       - name: Build
         run: |
           pyinstaller dcs5.spec
-          cd ./dist/
-          zip -r ./dcs5.zip
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -52,7 +50,7 @@
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.make_release.outputs.upload_url }}
-          asset_path: ./dist/dcs5/dcs5.zip
+          asset_path: ./dist/dcs5
           asset_name: dcs5.zip
           asset_content_type: application/octet-stream
 
