--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,38 @@
         - id: step_upload_url
           run: echo "::set-output name=upload_url::${{ steps.create_release.outputs.upload_url }}"
 
+    build_windows:
+      runs-on: windows-latest
+      needs: make_release
+      steps:
+        - uses: actions/checkout@v3
+        - name: Set up Python 3.10
+          uses: actions/setup-python@v3
+          with:
+            python-version: "3.10"
+        - name: Install Dependencies
+          run: |
+            python -m pip install --upgrade pip
+            python -m pip install -r requirements.txt
+            python -m pip install pyinstaller
+        - name: Build
+          run: |
+            pyinstaller dcs5.spec
+        - name: Upload release asset
+          id: upload-release-asset
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ needs.make_release.outputs.upload_url }}
+            asset_path: ./dist
+            asset_name: dcs5
+            asset_content_type: application/octet-stream
+
+
     build_linux:
       runs-on: ubuntu-latest
+      needs: make_release
       steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -50,38 +80,9 @@
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.make_release.outputs.upload_url }}
-          asset_path: ./dist/dcs5
-          asset_name: dcs5.zip
+          asset_path: ./dist
+          asset_name: dcs5
           asset_content_type: application/octet-stream
 
           
 
-    build_windows:
-      runs-on: windows-latest
-      needs: make_release
-      steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-          python -m pip install pyinstaller
-      - name: Build
-        run: |
-          pyinstaller dcs5.spec
-          cd .\dist\
-          zip -r .\dcs5.zip
-      - name: Upload release asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.make_release.outputs.upload_url }}
-          asset_path: ./dist/dcs5.zip
-          asset_name: dcs5.zip
-          asset_content_type: application/octet-stream
