--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@
         - name: Build
           run: |
             pyinstaller dcs5.spec
+            powershell Compress-Archive .\dist\dcs5 dcs5.zip
         - name: Upload release asset
           id: upload-release-asset
           uses: actions/upload-release-asset@v1
@@ -51,8 +52,8 @@
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             upload_url: ${{ needs.make_release.outputs.upload_url }}
-            asset_path: ./dist
-            asset_name: dcs5
+            asset_path: .\dcs5.zip
+            asset_name: dcs5.zip
             asset_content_type: application/octet-stream
 
 
@@ -73,15 +74,16 @@
       - name: Build
         run: |
           pyinstaller dcs5.spec
+          zip -r dcs5.zip /dist/dcs5/
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TO![](../../icon/bigfin_logo.bmp)KEN }}
         with:
           upload_url: ${{ needs.make_release.outputs.upload_url }}
-          asset_path: ./dist
-          asset_name: dcs5
+          asset_path: ./dcs5.zip
+          asset_name: dcs5.zip
           asset_content_type: application/octet-stream
 
           
