--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@
         - name: Build
           run: |
             pyinstaller dcs5.spec
-            powershell Compress-Archive .\dist\dcs5 dcs5.zip
+            powershell Compress-Archive .\dist\dcs5\ dcs5.zip
         - name: Upload release asset
           id: upload-release-asset
           uses: actions/upload-release-asset@v1
@@ -74,7 +74,7 @@
       - name: Build
         run: |
           pyinstaller dcs5.spec
-          zip -r dcs5.zip /dist/dcs5/
+          zip -r dcs5.zip ./dist/dcs5/
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
