--- a/dcs5/default_configs/xt_controller_configuration.json
+++ b/dcs5/default_configs/xt_controller_configuration.json
@@ -6,18 +6,16 @@
     "launch_settings": {
         "output_mode": "length",
         "reading_profile": "measure",
-        "dynamic_stylus_mode": false,
+        "dynamic_stylus_mode": true,
         "backlighting_level": 95,
-        "backlighting_auto_mode": false,
-        "backlighting_sensitivity": 0,
         "length_units": "mm",
         "stylus": "pen"
     },
     "reading_profiles": {
         "measure": {
-            "settling_delay": 1,
-            "number_of_reading": 1,
-            "max_deviation": 1
+            "settling_delay": 20,
+            "number_of_reading": 50,
+            "max_deviation": 50
         },
         "key": {
             "settling_delay": 1,
