adding auto_enter feature

--- a/dcs5/default_configs/xt_controller_configuration.json
+++ b/dcs5/default_configs/xt_controller_configuration.json
@@ -9,7 +9,8 @@
         "dynamic_stylus_mode": true,
         "backlighting_level": 95,
         "length_units": "mm",
-        "stylus": "pen"
+        "stylus": "pen",
+        "auto_enter": true
     },
     "reading_profiles": {
         "measure": {
