adding a proper micro default configuration

--- a/dcs5/default_configs/micro_controller_configuration.json
+++ b/dcs5/default_configs/micro_controller_configuration.json
@@ -41,11 +41,18 @@
             "a3": "BACKLIGHT_DOWN"
         },
         "control_box_mode": {
-            "a1": "",
-            "a2": "",
-            "a3": ""
+            "a1": null,
+            "a2": null,
+            "a3": null
         },
         "board": {
+            "left_arrow": "left",
+            "right_arrow":  "right",
+            "up_arrow": "up",
+            "down_arrow": "down",
+            "backspace": "backspace",
+            "space": "space",
+            "enter": "enter",
             "a": "a",
             "b": "b",
             "c": "c",
@@ -94,41 +101,18 @@
             "batch": null,
             "tab": null,
             "histo": null,
-            "summary": null,
-            "dismiss": null,
-            "fish": null,
-            "sample": null,
-            "sex": null,
-            "size": null,
-            "light_bulb": null,
-            "scale": null,
-            "location": null,
-            "pit_pwr": null,
-            "settings": null,
-            "1B": "-",
-            "2B": "(",
-            "3B": ")",
-            "4B": null,
-            "5B": null,
-            "6B": null,
-            "7B": "alt",
-            "8B": "shift",
-            "1G": "BACKLIGHT_DOWN",
-            "2G": "BACKLIGHT_UP",
-            "3G": null,
-            "4G": null,
-            "5G": null,
-            "6G": null,
-            "7G": "UNITS_mm",
-            "8G": "UNITS_cm",
-            "right_space_1": "space",
-            "right_space_2": "space",
-            "right_space_3": "space",
-            "right_space_4": "space",
-            "right_space_5": "space",
-            "right_space_6": "space",
-            "del_last_1": "backspace",
-            "del_last_2": "backspace"
+            "summary": "ctrl",
+            "dismiss": ["Y", "enter"],
+            "1G": "f1",
+            "2G": "f2",
+            "3G": "f3",
+            "4G": "f4",
+            "5G": "f5",
+            "6G": "f8",
+            "7G": "f9",
+            "8G": "f10",
+            "9G": "f11",
+            "del_last": "backspace"
         },
         "board_mode": {
             "a": "a",
