--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ PySimpleGUI==4.60.4
 python3-xlib==0.15
 pytweening==1.0.4
 
-marel_marine_scale_controller @ git+https://github.com/iml-gddaiss/marel_marine_scale_controller@releases/tag/v1.0.0
+marel_marine_scale_controller @ git+https://github.com/iml-gddaiss/marel_marine_scale_controller.git@release/v1
