remving some key maps from the default

--- a/dcs5/default_configs/xt_controller_configuration.json
+++ b/dcs5/default_configs/xt_controller_configuration.json
@@ -178,8 +178,8 @@
             "4G": null,
             "5G": null,
             "6G": null,
-            "7G": "UNITS_mm",
-            "8G": "UNITS_cm",
+            "7G": null,
+            "8G": null,
             "right_space_1": "space",
             "right_space_2": "space",
             "right_space_3": "space",
@@ -257,14 +257,14 @@
             "6B": null,
             "7B": "alt",
             "8B": "shift",
-            "1G": "BACKLIGHT_DOWN",
-            "2G": "BACKLIGHT_UP",
+            "1G": null,
+            "2G": null,
             "3G": null,
             "4G": null,
             "5G": null,
             "6G": null,
-            "7G": "UNITS_mm",
-            "8G": "UNITS_cm",
+            "7G": "BACKLIGHT_DOWN",
+            "8G": "BACKLIGHT_UP",
             "right_space_1": "space",
             "right_space_2": "space",
             "right_space_3": "space",
