--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -40,6 +40,7 @@ jobs:
     name: Build PDF
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
@@ -56,6 +57,7 @@ jobs:
     needs: Translate
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
