--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -46,11 +46,11 @@ jobs:
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.pdf
-            "-fmarkdown-implicit_figures -o"
-            --from=markdown
-            -V geometry:margin=.4in
-            --toc
-            --highlight-style=espresso
+#            "-fmarkdown-implicit_figures -o"
+#            --from=markdown
+#            -V geometry:margin=.4in
+#            --toc
+#            --highlight-style=espresso
             README.md
 
   convert_to_pdf_FR:
@@ -64,9 +64,9 @@ jobs:
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.fr.pdf
-            "-fmarkdown-implicit_figures -o"
-            --from=markdown
-            -V geometry:margin=.4in
-            --toc
-            --highlight-style=espresso
+#            "-fmarkdown-implicit_figures -o"
+#            --from=markdown
+#            -V geometry:margin=.4in
+#            --toc
+#            --highlight-style=espresso
             README.fr.md
