--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: docker://pandoc/latex:2.9 #- uses: docker://pandoc/core:2.9
+      - uses: docker://pandoc/latex:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.pdf
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: docker://pandoc/latex:2.9 #- uses: docker://pandoc/core:2.9
+      - uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.fr.pdf
