--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -41,8 +41,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-
-      - uses: docker://pandoc/core:2.9
+      - name: Using Docker Pandoc
+        uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.pdf
@@ -59,8 +59,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-
-      - uses: docker://pandoc/core:2.9
+      - name: Using Docker Pandoc
+        uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.fr.pdf
