attempt to bug fix no8.1 (pdflatex not found)

--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -40,9 +40,8 @@ jobs:
     name: Build PDF
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
-      - name: Using Docker Pandoc
-        uses: docker://pandoc/core:2.9
+      - run: echo "foo" > input.txt  # create an example file
+      - uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines 
             -o README.pdf
@@ -52,6 +51,21 @@ jobs:
 #            --toc
 #            --highlight-style=espresso
             README.md
+
+#    runs-on: ubuntu-22.04
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Using Docker Pandoc
+#        uses: docker://pandoc/core:2.9
+#        with:
+#          args: >-  # allows you to break string into multiple lines
+#            -o README.pdf
+##            "-fmarkdown-implicit_figures -o"
+##            --from=markdown
+##            -V geometry:margin=.4in
+##            --toc
+##            --highlight-style=espresso
+#            README.md
 
   convert_to_pdf_FR:
     name: Build PDF
