--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,4 +1,4 @@
-name: Translate README and convert to PDF
+name: Translate README
 
 on: push
 #  push:
@@ -36,51 +36,3 @@ jobs:
         with:
           LANG: fr
 
-  convert_to_pdf_EN:
-    name: Build PDF
-    runs-on: ubuntu-22.04
-    steps:
-      - run: echo "foo" > input.txt  # create an example file
-      - uses: docker://pandoc/core:2.9
-        with:
-          args: >-  # allows you to break string into multiple lines 
-            -o README.pdf
-#            "-fmarkdown-implicit_figures -o"
-#            --from=markdown
-#            -V geometry:margin=.4in
-#            --toc
-#            --highlight-style=espresso
-            README.md
-
-#    runs-on: ubuntu-22.04
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Using Docker Pandoc
-#        uses: docker://pandoc/core:2.9
-#        with:
-#          args: >-  # allows you to break string into multiple lines
-#            -o README.pdf
-##            "-fmarkdown-implicit_figures -o"
-##            --from=markdown
-##            -V geometry:margin=.4in
-##            --toc
-##            --highlight-style=espresso
-#            README.md
-
-  convert_to_pdf_FR:
-    name: Build PDF
-    needs: Translate
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: Using Docker Pandoc
-        uses: docker://pandoc/core:2.9
-        with:
-          args: >-  # allows you to break string into multiple lines 
-            -o README.fr.pdf
-#            "-fmarkdown-implicit_figures -o"
-#            --from=markdown
-#            -V geometry:margin=.4in
-#            --toc
-#            --highlight-style=espresso
-            README.fr.md
