attempt to bug fix no9.1 (Lord give me strength)

--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -5,7 +5,7 @@ jobs:
   convert_via_pandoc:
     runs-on: ubuntu-22.04
     steps:
-      - run: echo "foo" > input.txt  # create an example file
+      - uses: actions/checkout@v3
       - uses: docker://pandoc/core:2.9
         with:
           args: >-  # allows you to break string into multiple lines
