--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -1,6 +1,13 @@
 name: Readme to pdf (Pandoc)
 
+
 on: push
+#on:
+#  push:
+#    paths:
+#      - README.md
+
+
 jobs:
   convert_via_pandoc:
     runs-on: ubuntu-22.04
@@ -15,7 +22,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: user_guide_en.pdf
+          name: output
           path: dcs5/static/user_guide_en.pdf
 
 #  convert_to_pdf_EN:
