--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,10 +1,10 @@
 name: Translate README
 
-#on: push
-#  push:
-#    branches:
-#      - main
-#      - 'v*'
+on:
+  push:
+    branches:
+      -
+
 jobs:
   Translate:
     runs-on: ubuntu-latest
