--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -1,10 +1,10 @@
 name: Readme to pdf (Pandoc)
 
-on: push
-#on:
-#  push:
-#    paths:
-#      - README.md
+#on: push
+on:
+  push:
+    paths:
+      - README.md
 
 
 jobs:
