--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -17,9 +17,9 @@ jobs:
           args: >-  # allows you to break string into multiple lines
             "-fmarkdown-implicit_figures -o"
             --from=markdown
-            -V geometry:margin=.4in
-            --toc
-            --highlight-style=espresso
+#            -V geometry:margin=.4in
+#            --toc
+#            --highlight-style=espresso
             --output=dcs5/static/user_guide_en.pdf
             README.md
 
