--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -15,11 +15,9 @@ jobs:
       - uses: docker://pandoc/latex:latest
         with:
           args: >-  # allows you to break string into multiple lines
-            "-fmarkdown-implicit_figures -o"
+            --standalone
+            --fmarkdown-implicit_figures
             --from=markdown
-            -V geometry:margin=.4in
-            --toc
-            --highlight-style=espresso
             --output=dcs5/static/user_guide_en.pdf
             README.md
 
