--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           args: >-  # allows you to break string into multiple lines
             --standalone
-            --fmarkdown-implicit_figures
+            -f markdown+fancy_lists+implicit_figures
             --from=markdown
             --output=dcs5/static/user_guide_en.pdf
             README.md
