test mardown-pandoc on github

--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -16,11 +16,14 @@ jobs:
         with:
           args: >-  # allows you to break string into multiple lines
             --standalone
-            -from markdown+fancy_lists+implicit_figures
-            -V geometry:margin=.4in
-            --write=pdf
-            --output=dcs5/static/user_guide_en.pdf
+            --from markdown
+            -V geometry:margin=1in
+            --toc
+            --highlight-style=tango
+            --section-divs
+            --output=dcs5/static/user_guide_en.pdf  
             README.md
+
 
       - run: |
           git config user.name github-actions
