--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -16,7 +16,14 @@ jobs:
           args: >-  # allows you to break string into multiple lines
             --from markdown+implicit_figures 
             --to html5 
-            --metadata title="Dcs5 Controller" --metadata author="jerome.guay@dfo.mpo.gc.ca" --metadata date="May 2023" --highlight-style=tango -V colorlinks=True -V linkcolor=red -V urlcolor=blue --toc
+            --metadata title="Dcs5 Controller" 
+            --metadata author="jerome.guay@dfo.mpo.gc.ca" 
+            --metadata date="May 2023" 
+            --highlight-style=tango 
+            -V colorlinks=True 
+            -V linkcolor=red 
+            -V urlcolor=blue 
+            --toc
             --output=user_guide_en.html README.md
       - run: |
           git config user.name github-actions
