removing traduction workflow

--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,10 +1,10 @@
 name: Translate README
 
-on: push
-#on:
-#  push:
-#    branches:
-#      - not_a_branch
+#on: push
+on:
+  push:
+    branches:
+      - not_a_branch
 
 jobs:
   Translate:
