new default xt configuration

--- a/dcs5/default_configs/xt_controller_configuration.json
+++ b/dcs5/default_configs/xt_controller_configuration.json
@@ -44,10 +44,10 @@
             "a5": "f4",
             "a6": "f5",
             "b1": "f8",
-            "b2": "f9",
-            "b3": "f10",
-            "b4": "f11",
-            "b5": ["Y", "enter"],
+            "b2": "CHANGE_OUTPUT_MODE",
+            "b3": "f12",
+            "b4": ["Y", "enter"],
+            "b5": ["N", "enter"],
             "b6": "backspace",
             "c1": "WEIGHT",
             "0": "0",
@@ -63,7 +63,7 @@
             ".": ".",
             "skip": "pagedown",
             "enter": "enter",
-            "del": "DELETE_LAST",
+            "del": ["ctrl", "right", "ctrl", "a", "delete"],
             "up": "up",
             "down": "down",
             "left": "left",
@@ -77,11 +77,11 @@
             "a4": "UNITS_mm",
             "a5": "UNITS_cm",
             "a6": "CHANGE_STYLUS",
-            "b1": "MODE_TOP",
-            "b2": "MODE_LENGTH",
-            "b3": "MODE_BOTTOM",
-            "b4": "f11",
-            "b5": ["Y", "enter"],
+            "b1": "f8",
+            "b2": "CHANGE_OUTPUT_MODE",
+            "b3": "f12",
+            "b4": ["Y", "enter"],
+            "b5": ["N", "enter"],
             "b6": "backspace",
             "c1": "ctrl",
             "0": "0",
@@ -97,7 +97,7 @@
             ".": ".",
             "skip": "pagedown",
             "enter": "enter",
-            "del": "DELETE_LAST",
+            "del": ["ctrl", "right", "ctrl", "a", "delete"],
             "up": "up",
             "down": "down",
             "left": "left",
