--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,24 @@
         - id: step_upload_url
           run: echo "::set-output name=upload_url::${{ steps.create_release.outputs.upload_url }}"
 
+    upload_firmwares:
+      needs: make_release
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+
+        - name: Add file to release
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ needs.make_release.outputs.upload_url }}
+            asset_path: firmwares/*.eeprom
+            asset_content_type: application/octet-stream
+#            asset_name: dcs5-micro-v2-0-0-iml.eeprom
+
+
     build_windows:
       runs-on: windows-latest
       needs: make_release
