new delete line command

--- a/dcs5/default_configs/xt_controller_configuration.json
+++ b/dcs5/default_configs/xt_controller_configuration.json
@@ -63,7 +63,7 @@
             ".": ".",
             "skip": "pagedown",
             "enter": "enter",
-            "del": ["ctrl", "right", "ctrl", "a", "delete"],
+            "del": ["home", "shift", "end", "delete"],
             "up": "up",
             "down": "down",
             "left": "left",
@@ -97,7 +97,7 @@
             ".": ".",
             "skip": "pagedown",
             "enter": "enter",
-            "del": ["ctrl", "right", "ctrl", "a", "delete"],
+            "del": ["home", "shift", "end", "delete"],
             "up": "up",
             "down": "down",
             "left": "left",
